# fast-app

./: .env  .flake8  .gitignore  pyproject.toml
app/: config.py  database.py  logging_conf.py  main.py
app/migrations/: env.py
app/migrations/versions/: 22200f498ecb_initial_comit.py  89bef31e1449_initial_migration.py
app/models/: comment.py  post.py
app/routers/: comment.py  post.py
app/schemas/: __init__.py  comment.py  post.py
app/tests/: conftest.py
app/tests/routers/: test_post.py
tests/: conftest.py  test_simple.py
