[tool.poetry]
name = "fast-app"
version = "0.1.0"
description = ""
authors = ["nttlq <tllm@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pytest = "^8.3.2"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
rich = "^13.7.1"
asgi-correlation-id = "^4.3.2"
python-json-logger = "^2.0.7"
logtail-python = "^0.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
